# worldcup_agents

./: README.md  pyproject.toml
app/: api.py  db.py  main.py  models.py  schemas.py
app/agents/_common/: __init__.py  model.py
app/agents/analyst/: agent.py  agent_tools.py  config.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  tools.py
app/agents/match_prep/: agent.py  exceptions.py  schemas.py
app/agents/scout/: config.py
app/agents/tactician/: config.py
app/ai/: agent.py  deep_agents.py
app/auth/: models.py  repository.py
app/core/: deps.py  limiter.py  logging.py  settings.py
app/data/: england_players.json
docs/: planning.md
tests/: conftest.py  test_chat.py  test_db.py  test_main.py
tests/analyst/unit/: test_api.py  test_repo.py  test_service.py
